cmake_minimum_required(VERSION 3.20)
project(test_link)

set(CMAKE_CXX_STANDARD 14)

find_package (Qt5Widgets REQUIRED NO_CMAKE_SYSTEM_PATH)

add_executable(test_link main.cpp)

target_link_libraries(${PROJECT_NAME} PRIVATE QtUtil)

enable_testing()
add_test(
        NAME link_on_lib
        COMMAND $<TARGET_FILE:test_link>
)